--- a/README.qmd
+++ b/README.qmd
@@ -15,6 +15,7 @@ development and running the following examples.
 `docker run -it docker.io/jsleight1/pydata:3.10-latest`
 
 ```{python}
+import matplotlib.pyplot as plt
 from pydata.pydata import pydata
 
 x = pydata.example_pydata()
@@ -43,7 +44,11 @@ print(x.pcs.annotation)
 ## Plotting
 
 ```{python}
-
 # PCA 
 x.plot(type = "pca", colour_by = "Treatment")
+plt.show()
+
+# Violin
+x.plot(type = "violin", colour_by = "Treatment")
+plt.show()
 ```
