Add first attempt at pydata heatmap

--- a/README.qmd
+++ b/README.qmd
@@ -44,11 +44,16 @@ print(x.pcs.annotation)
 ## Plotting
 
 ```{python}
-# PCA 
 x.plot(type = "pca", colour_by = "Treatment")
 plt.show()
 
-# Violin
 x.plot(type = "violin", colour_by = "Treatment")
+plt.show()
+
+x.plot(
+    type = "heatmap", 
+    annotate_samples_by = ["ID", "Treatment"], 
+    cmap = "coolwarm"
+)
 plt.show()
 ```
