Add correlation/feature heatmap + density plot

--- a/README.qmd
+++ b/README.qmd
@@ -51,9 +51,17 @@ x.plot(type = "violin", colour_by = "Treatment")
 plt.show()
 
 x.plot(
-    type = "heatmap", 
-    annotate_samples_by = ["ID", "Treatment"], 
-    cmap = "coolwarm"
+    type = "feature_heatmap", 
+    annotate_samples_by = ["ID", "Treatment"]
 )
+plt.show()
+
+x.plot(
+    type = "correlation_heatmap", 
+    annotate_samples_by = ["ID", "Treatment"]
+)
+plt.show()
+
+x.plot(type = "density")
 plt.show()
 ```
