--- a/README.qmd
+++ b/README.qmd
@@ -14,6 +14,8 @@ development and running the following examples.
 
 `docker run -it docker.io/jsleight1/pydata:3.10-latest`
 
+## Pydata generation and handling
+
 ```{python}
 import matplotlib.pyplot as plt
 from pydata.pydata import pydata
@@ -24,6 +26,13 @@ print(x)
 print(x.data.head(2))
 print(x.description.head(2))
 print(x.annotation.head(2))
+
+x.subset(
+    samples = ["Sample1", "Sample30", "Sample52"], 
+    features = ["sepal_length", "petal_length"]
+)
+
+x.transpose()
 
 ```
 
@@ -61,7 +70,7 @@ plt.show()
 x.plot(type = "lda")
 plt.show()
 
-x.plot(type = "violin", samples = x.colnames[0:10], hue = "Species")
+x.subset(samples = ["Sample1", "Sample2"]).plot(type = "violin")
 plt.show()
 
 x.plot(
