--- a/README.qmd
+++ b/README.qmd
@@ -108,6 +108,6 @@ plt.show()
 ```
 
 ```{python}
-x.transpose().plot(type="scatter")
+x.transpose().plot(type="scatter", xaxis="petal_length", yaxis="sepal_length")
 plt.show()
 ```
