--- a/README.qmd
+++ b/README.qmd
@@ -8,6 +8,10 @@ format:
 [![CI](https://github.com/jsleight1/pydata/actions/workflows/test.yml/badge.svg?branch=development)](https://github.com/jsleight1/pydata/actions/workflows/test.yml)
 [![License](https://img.shields.io/badge/License-GNU%20GPL-blue)](https://github.com/jsleight1/pydata/blob/master/LICENSE)
 
+
+
+![badge](https://img.shields.io/endpoint?url=https://gist.githubusercontent.com/jsleight1/751d1a5c71730402c81f54e9f70444ad/raw/test.json)
+
 ## `pydata`
 
 `pydata` is a python package developed for the analysis and visualisation of 
