--- a/README.qmd
+++ b/README.qmd
@@ -5,12 +5,9 @@ format:
         preview-mode: raw
 ---
 
-[![CI](https://github.com/jsleight1/pydata/actions/workflows/test.yml/badge.svg?branch=development)](https://github.com/jsleight1/pydata/actions/workflows/test.yml)
+[![CI](https://github.com/jsleight1/pydata/actions/workflows/test.yml/badge.svg?branch=development)](https://github.com/jsleight1/pydata/actions/workflows/test.yml)![badge](https://img.shields.io/endpoint?url=https://gist.githubusercontent.com/jsleight1/751d1a5c71730402c81f54e9f70444ad/raw/pydata_cov_badge.json)
+![Coverage](https://img.shields.io/endpoint?url=https://gist.githubusercontent.com/jsleight1/751d1a5c71730402c81f54e9f70444ad/raw/pydata_cov_badge.json)
 [![License](https://img.shields.io/badge/License-GNU%20GPL-blue)](https://github.com/jsleight1/pydata/blob/master/LICENSE)
-
-
-
-![badge](https://img.shields.io/endpoint?url=https://gist.githubusercontent.com/jsleight1/751d1a5c71730402c81f54e9f70444ad/raw/pydata_cov_badge.json)
 
 ## `pydata`
 
